2010-06-08  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed formatting of t3lib_PageRenderer_testcase

2010-06-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14611: [Install] Content of Input Fields is not displayed completely

2010-06-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14638: Update caching framework to its according FLOW3 revision 4443

2010-06-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
	* Fixed bug #12486: RTE does not work with Arora

2010-06-06  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14560: Violation of naming conventions in sprite generation API
	* Fixed issue #14561: Violation of naming conventions in t3lib_compressor

2010-06-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14630: Backend doesn't use $this->pageRenderer

2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #1294: movie param of flash object not processed by prefixResourcePath(Thanks to Jigal van Hemert)
	* Fixed bug #14629: Copyright Year in Page Source is still wrong (Thanks to Jigal van Hemert)

2010-06-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14635: Caching framework file backend: Unit test fixes
	* Fixed bug #14632: Caching framework memcached backend: No exception thrown if set() fails and wrong boolean comparison
	* Fixed bug #14631: Caching framework memcached backend: Wrong memcache server detection in unit tests
	* Follow-up to #11386: Caching framework file backend does not return absolute path in getCacheDirectory()
	* Fixed bug #14455: [Performance] Wrong variable in t3lib_cache_memcachedbackend leads to redundant data (Thanks to Dan Osipov)

2010-06-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14625: htmlArea RTE: Inconsistant position of ok button

2010-06-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14626: Login refresh popup should not display news